fix: remove spacing changes on hover card

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -86,12 +86,9 @@
     color: white;
     transition: background 350ms;
     .card__title {
-      margin-bottom: 0;
-      margin-top: 20px;
       transition: all 350ms;
     }
     .card__value {
-      margin-bottom: 0;
       transition: all 350ms;
     }
     button {
